@@ -448,9 +448,14 @@ function injectAtualizacaoVersao()
 {
     let s = document.createElement('script');
     document.head.appendChild(s); 
-    s.innerText = `window.addEventListener('load',()=>{
-        const CURRENT_VERSION = ${EXTENSION_VERSION};
-        const URL_API_UPDATE = 'https://possoler.tech/API/searchUpdates.php';
+    s.innerText = `
+        
+        var contMessageIndex=0;
+
+        window.addEventListener('load',()=>{
+            const CURRENT_VERSION = ${EXTENSION_VERSION};
+            const URL_API_UPDATE = 'https://possoler.tech/API/searchUpdates.php';
+            let tempoAwait = 5;
 
             axios({
                 method: 'get',
@@ -463,62 +468,65 @@ function injectAtualizacaoVersao()
                 let tempo = resposta.data.params.time;
         
                 if(CURRENT_VERSION<updateVersion){
-
-                    let options = {
-                        text: msgUpdate,
-                        actionTextColor: '#a1ff00',
-                        actionText: tituloBtn,
-                        pos: 'top-right',
-                        duration: tempo*1000,
-                        customClass: 'snackZ-index',
-                        onActionClick: ()=>{
-                            window.open('https://possoler.tech/#blockDownload');
-                        }
-                    };
         
+                    tempoAwait = 12;
+                    let options = configSnackBar(msgUpdate,tituloBtn,tempo);
                     Snackbar.show(options);
                 }
+        
+                verificaMensagensAPI(tempoAwait);
+        
+            }).catch((erro)=>{
+                console.error(erro);
+                verificaMensagensAPI(tempoAwait);
+            });
+        });
+        
+
+        function verificaMensagensAPI(time)
+        {
+            const URL_MESSAGES = 'https://possoler.tech/API/searchMessages.php';
+
+            axios({
+                method: 'get',
+                url: URL_MESSAGES,
+                timeout: 10000,
+            }).then((resposta)=>{
+
+                setTimeout(()=>{
+                    let qtdMessages = resposta.data.messages.length;
+                    showSnackMessages(resposta, qtdMessages);
+                }, time*1000);
+
             }).catch((erro)=>{
                 console.error(erro);
             });
-        
-        
-            setTimeout(()=>{
-                const URL_MESSAGES = 'https://possoler.tech/API/searchMessages.php';
-        
-                axios({
-                    method: 'get',
-                    url: URL_MESSAGES,
-                    timeout: 10000,
-                }).then((resposta)=>{
-        
-                    let qtdMessages = resposta.data.messages.length;
-                    var cont=0;
-                    let r = setInterval(()=>{
-                        if(cont>=qtdMessages){
-                            clearInterval(r);
-                        }
-                        else{
-                            let options = {
-                                text: resposta.data.messages[cont].msg,
-                                actionTextColor: '#a1ff00',
-                                showAction: true,
-                                actionText: 'OK',
-                                pos: 'top-right',
-                                duration: resposta.data.messages[cont].time*1000,
-                                customClass: 'snackZ-index',
-                            };
-            
-                            Snackbar.show(options);
-                            cont++;
-                        }
-                    },6000);
-                }).catch((erro)=>{
-                    console.error(erro);
-                });
-            },12000);
+        }
 
-    })`;
+
+        function showSnackMessages(resposta, qtdMessages)
+        {
+            let tempoMensagemAPI = resposta.data.messages[contMessageIndex].time;
+
+            let options = {
+                text: resposta.data.messages[contMessageIndex].msg,
+                actionTextColor: '#a1ff00',
+                showAction: true,
+                actionText: 'OK',
+                pos: 'top-right',
+                duration: tempoMensagemAPI*1000,
+                customClass: 'snackZ-index',
+            };
+
+            Snackbar.show(options);
+            contMessageIndex++;
+            tempoMensagemAPI++;
+
+            setTimeout(()=>{
+                if(contMessageIndex>=qtdMessages) return;
+                showSnackMessages(resposta, qtdMessages);
+            }, tempoMensagemAPI*1000);
+        }`;
 }
 
 /* ========================== METODOS GLOBAIS ===================================== */
